--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
   implementation("org.processing:core:3.3.7")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
   testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
